[package]
name = "loxahatchee-river-fl"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "View account, billing, charges, and payment history for Loxahatchee River District utilities from the command line — agent-friendly, JSON-capable."
license = "MIT OR Apache-2.0"
repository = "https://github.com/piekstra/loxahatchee-river-fl"
readme = "README.md"
keywords = ["loxahatchee", "utility", "billing", "cli", "wipp"]
categories = ["command-line-utilities"]

# Library + binary split: business logic lives in the library (testable, reusable);
# `main.rs` is a thin binary that parses args and dispatches into `commands/`.
[lib]
name = "loxahatchee_river_fl"
path = "src/lib.rs"

[[bin]]
name = "lrfl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rpassword = "7"
zeroize = "1"
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }

# Platform-native secret stores for the login session (the portal password):
# macOS Keychain, Windows Credential Manager, Linux Secret Service (pure-Rust crypto).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
