[package]
name = "loxahatchee-river-fl"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "View account, billing, charges, and payment history for Loxahatchee River District utilities from the command line — agent-friendly, JSON-capable."
license = "MIT OR Apache-2.0"
repository = "https://github.com/piekstra/loxahatchee-river-fl"
readme = "README.md"
keywords = ["loxahatchee", "utility", "billing", "cli", "wipp"]
categories = ["command-line-utilities"]

# Library + binary split: business logic lives in the library (testable, reusable);
# `main.rs` is a thin binary that parses args and dispatches into `commands/`.
[lib]
name = "loxahatchee_river_fl"
path = "src/lib.rs"

[[bin]]
name = "lrfl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
pk-cli-core = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2", features = ["reqwest"] }
pk-cli-secrets = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2" }
pk-cli-selfupdate = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2" }
pk-cli-auth = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2" }
serde_json = "1"


[profile.release]
strip = true
lto = true
opt-level = "z"
